fixes custom timer length setting in dark mode

--- a/css/settings.css
+++ b/css/settings.css
@@ -59,6 +59,17 @@
   grid-column: 2;
 }
 
+#focusTime {
+  color: black;
+}
+
+#shortBreakTime {
+  color: black;
+}
+
+#longBreakTime {
+  color: black;
+}
 /* #workSoundSelector {
   grid-row: 1;
   grid-column: 1;
